WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149244
removeShadow shouldn't call ChildNodeRemovalNotifier with the shadow host as the removal point
https://bugs.webkit.org/show_bug.cgi?id=149244
Summary
removeShadow shouldn't call ChildNodeRemovalNotifier with the shadow host as ...
Ryosuke Niwa
Reported
2015-09-16 18:27:48 PDT
Since the shadow host is in a different tree than nodes in its shadow tree, it's incorrect to call removedFrom with the shadow host as the removal point. This bug was revealed while working on the
bug 149241
.
Attachments
Fixes the bug
(3.48 KB, patch)
2015-09-16 18:41 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews107 for mac-mavericks-wk2
(838.28 KB, application/zip)
2015-09-16 19:40 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews103 for mac-mavericks
(885.29 KB, application/zip)
2015-09-16 19:59 PDT
,
Build Bot
no flags
Details
Fixed the bug
(3.53 KB, patch)
2015-09-16 21:37 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2015-09-16 18:41:31 PDT
Created
attachment 261347
[details]
Fixes the bug
Build Bot
Comment 2
2015-09-16 19:40:03 PDT
Comment on
attachment 261347
[details]
Fixes the bug
Attachment 261347
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/178029
Number of test failures exceeded the failure limit.
Build Bot
Comment 3
2015-09-16 19:40:08 PDT
Created
attachment 261353
[details]
Archive of layout-test-results from ews107 for mac-mavericks-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-mavericks-wk2 Platform: Mac OS X 10.9.5
Build Bot
Comment 4
2015-09-16 19:59:44 PDT
Comment on
attachment 261347
[details]
Fixes the bug
Attachment 261347
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/178071
Number of test failures exceeded the failure limit.
Build Bot
Comment 5
2015-09-16 19:59:49 PDT
Created
attachment 261356
[details]
Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Ryosuke Niwa
Comment 6
2015-09-16 21:00:25 PDT
Okay, I don't think these failures are related to my patch.
Ryosuke Niwa
Comment 7
2015-09-16 21:34:26 PDT
Comment on
attachment 261347
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=261347&action=review
> Source/WebCore/dom/Element.cpp:1618 > + ASSERT(shadowRoot.insertedInto(*this) == InsertionDone);
Oh snap, I'm not calling this function in a Release build :(
Ryosuke Niwa
Comment 8
2015-09-16 21:37:08 PDT
Created
attachment 261364
[details]
Fixed the bug
WebKit Commit Bot
Comment 9
2015-09-16 23:12:21 PDT
Comment on
attachment 261364
[details]
Fixed the bug Clearing flags on attachment: 261364 Committed
r189906
: <
http://trac.webkit.org/changeset/189906
>
WebKit Commit Bot
Comment 10
2015-09-16 23:12:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug